Squashing Strict Standards bug caused by shortcode

--- a/css/food-drink-menu-styles.css
+++ b/css/food-drink-menu-styles.css
@@ -1,17 +1,5 @@
 @import url(https://fonts.googleapis.com/css?family=Abel|Josefin+Sans|Quicksand|Pacifico);
 
-/*body{
-
-	background-color: #808080;
-	background-color: #bdbcbc;
-	background-color: firebrick;
-	color: #eaeaea;
-	font-family: 'Abel', sans-serif;
-	/*font-family: 'Quicksand', sans-serif;*/
-/*    font-weight: 100;
-*/
-}*/
-
 h1{
 
 	text-align: center;
@@ -25,6 +13,13 @@ h3{
 
 }
 
+/*Target the parent div to the table and make it expand the width of its container*/
+table#wp-food-drink-menu-html-table:parent{
+    
+    width: 100%;
+    
+}
+
 table#wp-food-drink-menu-html-table{
 
 	background-color: #808080;
@@ -32,8 +27,9 @@ table#wp-food-drink-menu-html-table{
 	background-color: firebrick !important;
 	color: #eaeaea;
 	font-weight: 100;
-	width: 65%;
+	width: 100%;
 	margin: auto;
+    border-radius: 5px;
 
 }
 
@@ -43,6 +39,12 @@ table#wp-food-drink-menu-html-table{
 	padding: 15px;
 	text-align: center;
 
+}
+
+#wp-food-drink-menu-html-table td{
+    
+    border-style: none;
+    
 }
 
 #sizes td{
@@ -61,7 +63,8 @@ td.drink, .drink-head{
 td.drink{
 
 	font-size: 25px;
-
+    text-align: left !important;
+ 
 }
 
 .drink-head{
